apps/base/guacamole/guacamole.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole-system
  labels:
    networking.tinyrack.net/isolation: enabled
