apps/base/guacamole/guacamole.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-service
  namespace: guacamole-system
spec:
  selector:
    app: guacamole
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
