apps/base/guacamole/guacd.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd-service
  namespace: guacamole-system
spec:
  selector:
    app: guacd
  ports:
    - name: guacd
      port: 4822
      targetPort: guacd
      protocol: TCP
