apps/base/guacamole/guacamole.ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guacamole
  namespace: guacamole-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`remote.intranet.winetree94.com`)
      kind: Rule
      services:
        - name: guacamole-service
          port: 8080
  tls:
    secretName: letsencrypt-cert
