apps/base/guacamole/guacamole.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: guacamole.winetree94.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guacamole-guacamole
                port:
                  name: http
  tls:
    - hosts:
        - "guacamole.winetree94.click"
      secretName: letsencrypt-cert
