apps/base/guacamole/guacamole.network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: app-guacamole
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: guacamole-system
        app: guacamole-guacamole
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: traefik-system
              app.kubernetes.io/name: traefik
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              app: guacamole-guacd
        toPorts:
          - ports:
              - port: "4822"
                protocol: TCP
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              cnpg.io/cluster: guacamole-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: guacamole-system
        app: guacamole-guacd
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              app: guacamole-guacamole
        toPorts:
          - ports:
              - port: "4822"
                protocol: TCP
    egress:
      - toCIDR:
          - 10.132.244.0/22
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: guacamole-system
        cnpg.io/cluster: guacamole-database-cluster
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              app: guacamole-guacamole
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: cnpg-system
        toPorts:
          - ports:
              - port: "8000"
                protocol: TCP
              - port: "9187"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              cnpg.io/cluster: guacamole-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              cnpg.io/cluster: guacamole-database-cluster
        toPorts:
          - ports:
              - port: "5432"
                protocol: TCP
              - port: "8000"
                protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: traefik-system
        app.kubernetes.io/name: traefik
    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: guacamole-system
              app: guacamole-guacamole
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
