apps/base/guacamole/guacamole.traefik.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: route-guacamole
  namespace: traefik-system
  labels:
    networking.tinyrack.net/owner: guacamole
  annotations:
    networking.tinyrack.net/hosts: remote.intranet.winetree94.com
spec:
  description: Allow the remote.intranet.winetree94.com route
  endpointSelector:
    matchLabels:
      io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
      app.kubernetes.io/name: traefik
  egress:
    - toServices:
        - k8sService:
            namespace: guacamole-system
            serviceName: guacamole-service
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
